--- a/build.gradle
+++ b/build.gradle
@@ -15,3 +15,7 @@ buildscript {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    abiFilters = "armeabi-v7a,arm64-v8a,x86,x86_64"
+}
