--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -14,14 +14,14 @@ project("nativecdemo-lib")
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
 
-add_library( # Sets the name of the library.
-        nativecdemo-lib
-
-        # Sets the library as a shared library.
-        SHARED
-
-        # Provides a relative path to your source file(s).
-        native-lib.cpp)
+#add_library( # Sets the name of the library.
+#        nativecdemo-lib
+#
+#        # Sets the library as a shared library.
+#        SHARED
+#
+#        # Provides a relative path to your source file(s).
+#        native-lib.cpp)
 
 add_library( # Sets the name of the library.
         jnitools
@@ -30,7 +30,7 @@ add_library( # Sets the name of the library.
         SHARED
 
         # Provides a relative path to your source file(s).
-        jnitools.cpp)
+        native-lib.cpp jnitools.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -49,12 +49,12 @@ find_library( # Sets the name of the path variable.
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
 
-target_link_libraries( # Specifies the target library.
-        nativecdemo-lib
-
-        # Links the target library to the log library
-        # included in the NDK.
-        ${log-lib})
+#target_link_libraries( # Specifies the target library.
+#        nativecdemo-lib
+#
+#        # Links the target library to the log library
+#        # included in the NDK.
+#        ${log-lib})
 
 target_link_libraries( # Specifies the target library.
         jnitools
